--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@vercel/analytics": "^1.6.1",
     "maath": "^0.10.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
