--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@vercel/analytics": "^1.6.1",
+    "lucide-react": "^0.562.0",
     "maath": "^0.10.8",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
