--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/analytics": "^1.6.1",
     "lucide-react": "^0.562.0",
     "maath": "^0.10.8",
+    "motion": "^12.27.1",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
