--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.3",
     "@number-flow/react": "^0.5.10",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
