--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/fiber": "^9.5.0",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "maath": "^0.10.8",
     "motion": "^12.27.1",
