--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/fiber": "^9.5.0",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
+    "firebase": "^12.9.0",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "maath": "^0.10.8",
@@ -24,6 +25,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.13.0",
     "three": "^0.182.0"
   },
   "devDependencies": {
